LIST OF CHANGES
---------------

 - Added eseq_run table to ml warehouse database. The table will keep
   information about a run performed on an Element Biosciences instrument.
   Generate DBIx class for this table.

release 6.35.0 (2025-01-16)
 - Fix perlbrew installation by installing libdevel-patchperl-perl in
   GitHub runner.
 - Updated ORM classes by ingesting changes for the 'sample' table from the
   production database. Added a class for the 'aliqoute' table.

release 6.34.0 (2024-10-24)
 - Added new delegated methods to WTSI::DNAP::Warehouse::Schema::Result::IseqFlowcell,
   sample_uuid and sample_lims.
 - Updated ORM classes by ingesting changes from the prod database

release 6.33.1 (2024-10-04)
 - Added .github/dependabot.yml file to auto-update GitHub actions
 - GitHub CI - updated deprecated v2 runner action to v3
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.

release 6.33.0 (2024-08-30)
 - Study class updated following the addition of the
   contaminated_human_data_access_group column to the study table.

release 6.32.0 (2024-07-25)
 - add seq_product_irods_locations relationship to IseqProductMetric

release 6.31.1
 - Minor changes to the pac_bio_product_metrics table

release 6.31.0
 - Additional columns added to the iseq_product_metrics table to support
   BGE library metrics reporting.
 - Add columns to pac_bio_product_metrics to store tag level yield
   related metrics and bring other tables up to date

release 6.30.0