@@ -1,3 +1,6 @@
+--
+-- Create a new table for Elembio run data
+--
 CREATE TABLE `eseq_run` (
   `id_eseq_run_tmp` BIGINT UNSIGNED NOT NULL AUTO_INCREMENT \
     COMMENT 'Internal to this database id, value can change',
@@ -20,4 +23,13 @@ CREATE TABLE `eseq_run` (
   PRIMARY KEY (`id_eseq_run_tmp`),
   UNIQUE KEY `eseq_run_fname_unique` (`folder_name`)
 ) DEFAULT CHARSET=utf8 COMMENT \
-  'Information about a run performed on an Element Biosciences instrument derived from instrument output';  
+  'Information about a run performed on an Element Biosciences instrument derived from instrument output';
+
+--
+-- Add a column to iseq_run_lane_metrics to capture the time the lane
+-- is released, ie QC-ed and archived.
+--
+ALTER TABLE `iseq_run_lane_metrics` \
+  ADD COLUMN `lane_released` datetime DEFAULT NULL \
+  COMMENT 'The date the lane was released, ie QC-ed and fully archived' \
+  AFTER `run_complete`;
