@@ -4,6 +4,8 @@ LIST OF CHANGES
  - Added eseq_run table to ml warehouse database. The table will keep
    information about a run performed on an Element Biosciences instrument.
    Generate DBIx class for this table.
+ - Added 'lane_released' column to the existing iseq_run_lane_metrics table
+   to capture the date of lane release.
 
 release 6.35.0 (2025-01-16)
  - Fix perlbrew installation by installing libdevel-patchperl-perl in
